frontal/grammar.txt
<Program> ::= <Statement>*

<Statement> ::= <FuncDeclaration> | <VarDeclaration> | <Expr>

<FuncDeclaration> ::= "FN" <Identifier> "(" <ParamList>? ")" "{" <Statement>* "}"
<ParamList> ::= <Identifier> ("," <Identifier>)*

<VarDeclaration> ::= ("LET" | "CONST") <Identifier> ("=" <Expr>)? ";"

<Expr> ::= <AssignmentExpr>

<AssignmentExpr> ::= <AdditiveExpr> ("=" <Expr>)?

<AdditiveExpr> ::= <MultiplicativeExpr> (("+" | "-" | "%") <MultiplicativeExpr>)*

<MultiplicativeExpr> ::= <CallMemberExpr> (("*" | "/") <CallMemberExpr>)*

<CallMemberExpr> ::= <MemberExpr> | <CallExpr>

<CallExpr> ::= <Expr> "(" <Args>? ")"

<MemberExpr> ::= <PrimaryExpr>

<PrimaryExpr> ::= <Identifier> | <NumericLiteral> | "(" <Expr> ")"

<Args> ::= "(" <ArgsList> ")"

<ArgsList> ::= <Expr> ("," <Expr>)*
